feat(spawn-jdk): add AddExports, AddOpens, AddReads, and PackageName option types